tests/ui/feature-gates/feature-gate-const-attr-paths-unresolved.stderr
error[E0658]: const item paths in builtin attributes are experimental
  --> $DIR/feature-gate-const-attr-paths-unresolved.rs:3:14
   |
LL | #[repr(align(UNKNOWN_ALIGN))]
   |              ^^^^^^^^^^^^^
   |
   = note: see issue #52840 <https://github.com/rust-lang/rust/issues/52840> for more information
   = help: add `#![feature(const_attr_paths)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const item paths in builtin attributes are experimental
  --> $DIR/feature-gate-const-attr-paths-unresolved.rs:7:15
   |
LL | #[repr(packed(UNKNOWN_PACK))]
   |               ^^^^^^^^^^^^
   |
   = note: see issue #52840 <https://github.com/rust-lang/rust/issues/52840> for more information
   = help: add `#![feature(const_attr_paths)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const item paths in builtin attributes are experimental
  --> $DIR/feature-gate-const-attr-paths-unresolved.rs:11:15
   |
LL | #[rustc_align(UNKNOWN_FN_ALIGN)]
   |               ^^^^^^^^^^^^^^^^
   |
   = note: see issue #52840 <https://github.com/rust-lang/rust/issues/52840> for more information
   = help: add `#![feature(const_attr_paths)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const item paths in builtin attributes are experimental
  --> $DIR/feature-gate-const-attr-paths-unresolved.rs:15:22
   |
LL | #[rustc_align_static(UNKNOWN_STATIC_ALIGN)]
   |                      ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52840 <https://github.com/rust-lang/rust/issues/52840> for more information
   = help: add `#![feature(const_attr_paths)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
